--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">StatusLightDemo_I4</string>
+    <string name="app_name">StatusLightDemo_E466847</string>
 </resources>
